[package]
name = "ugbe-sdl2"
version = "0.1.0"
edition = "2021"
authors = ["Quentin BUATHIER <quentinbuathier@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.60"
blip_buf = "0.1.4"
crossbeam-channel = "0.5.6"
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
ugbe = { version = "=0.1.0", path = "../ugbe" }
